--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,5 @@
-# Eclipse build configuration folders
-/Debug/
-/Release/
-
-/linux-gcc-libfgeal-debug/
-/linux-gcc-libfgeal-release/
-/win32-mingw-libfgeal-debug/
-/win32-mingw-libfgeal-release/
-
-/linux-gcc-allegro5.0-debug/
-/linux-gcc-allegro5.0-release/
-/linux-gcc-sdl1.2-debug/
-/linux-gcc-sdl1.2-release/
-/linux-gcc-sdl2.0-debug/
-/linux-gcc-sdl2.0-release/
-
-/win32-mingw-allegro5.0-debug/
-/win32-mingw-allegro5.0-release/
-/win32-mingw-sdl1.2-debug/
-/win32-mingw-sdl1.2-release/
-/win32-mingw-sdl2.0-debug/
-/win32-mingw-sdl2.0-release/
+# Saved map
+saved_map.txt
 
 # Eclipse local files
 language.settings.xml
@@ -29,5 +9,34 @@ org.eclipse.cdt.ui.prefs
 org.eclipse.cdt.managedbuilder.core.prefs
 org.eclipse.core.resources.prefs
 
-# Saved map
-saved_map.txt
+# Eclipse default build configuration folders
+/Debug/
+/Release/
+
+# Eclipse builds linking to libfgeal/fgeal.dll
+/linux-gcc-libfgeal-debug/
+/linux-gcc-libfgeal-release/
+/win32-mingw-libfgeal-debug/
+/win32-mingw-libfgeal-release/
+
+# Eclipse builds linking to Allegro 5.0 through fgeal
+/linux-gcc-allegro5.0-debug/
+/linux-gcc-allegro5.0-release/
+/win32-mingw-allegro5.0-debug/
+/win32-mingw-allegro5.0-release/
+
+# Eclipse builds linking to SDL 1.2 through fgeal
+/linux-gcc-sdl1.2-debug/
+/linux-gcc-sdl1.2-release/
+/win32-mingw-sdl1.2-debug/
+/win32-mingw-sdl1.2-release/
+
+# Eclipse builds linking to SDL 2.0 through fgeal
+/linux-gcc-sdl2.0-debug/
+/linux-gcc-sdl2.0-release/
+/win32-mingw-sdl2.0-debug/
+/win32-mingw-sdl2.0-release/
+
+# Eclipse builds linking to SFML 2.0 through fgeal
+/linux-gcc-sfml2.0-debug/
+/linux-gcc-sfml2.0-release/
